--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -1,7 +1,22 @@
-<mvc:View controllerName="com.packageEXAMPLE_UI5.controller.View1" xmlns:html="http://www.w3.org/1999/xhtml" xmlns:mvc="sap.ui.core.mvc"
-	displayBlock="true" xmlns="sap.m">
-	<App id="fioriContent" >
-		<Page title="{i18n>title}" >
+<mvc:View
+		xmlns:c="sap.ui.core"
+		controllerName="com.packageEXAMPLE_UI5.controller.View1"
+		xmlns:mvc="sap.ui.core.mvc"
+		xmlns:u="sap.ui.unified"
+        xmlns:core="sap.ui.core"
+		xmlns="sap.m"
+		xmlns:sf="sap.ui.layout.form"
+		xmlns:f="sap.f"
+		xmlns:layout="sap.ui.layout"
+		xmlns:t="sap.ui.table"
+		height="100%"
+		width="100%">
+	<SplitApp id="SplitAppDemo" 
+		initialDetail="detail" 
+		initialMaster="master" 
+		orientationChange="onOrientationChange">
+		<detailPages>
+			<Page showHeader="false">
 			<VBox>
 				<items>
 					<Panel>
@@ -61,7 +76,7 @@
 							</VBox>
 						</items>
 					</HBox>
-					<Table items="{path:' / '}">
+					<Table items="{/}">
 						<columns>
 							<Column>
 								<header>
@@ -82,7 +97,7 @@
 						<items>
 							<ColumnListItem type="Active">
 								<cells>
-									<Text text="{path:'name'}"/>
+									<Text text="{name}"/>
 									<Text text="{username}"/>
 									<Text text="{email}"/>
 								</cells>
@@ -92,5 +107,61 @@
 				</items>
 			</VBox>
 		</Page>
-	</App>
+		</detailPages>
+		
+		<masterPages>
+			<Page title="{i18n>title}" showHeader="false">
+				<content>
+					<Title id="tabTitle" 
+						   text="Clothing" 
+						   textAlign="Center" 
+						   width="100%" 
+						   class="custTitleStyle"/>
+					<t:TreeTable
+						id="TreeTableBasic"
+	                    rows="{path:'/catalog/clothing', parameters: {arrayNames:['categories']}}"
+	                    selectionMode="MultiToggle"
+	                    enableSelectAll="false"
+	                    ariaLabelledBy="title"
+	                    height="100%">
+						 <t:extension>
+		                    <Toolbar>
+		                        <Button text="Collapse all" press="onCollapseAll" width="25%"/>
+		                        <Button text="Collapse selection" press="onCollapseSelection" width="25%"/>
+		                        <Button text="Expand first level" press="onExpandFirstLevel" width="25%"/>
+		                        <Button text="Expand selection" press="onExpandSelection" width="25%"/>
+		                    </Toolbar>
+                		</t:extension>
+                		<t:columns>
+                			<t:Column width="50%">
+		                        <Label text="Categories"/>
+		                        <t:template>
+		                            <Text text="{name}" wrapping="false" />
+		                        </t:template>
+		                    </t:Column>
+		                    <t:Column width="25%">
+		                        <Label text="Price"/>
+		                        <t:template>
+		                            <u:Currency value="{amount}" currency="{currency}"/>
+		                        </t:template>
+		                    </t:Column>
+		                    <t:Column width="25%">
+		                        <Label text="Size"/>
+		                        <t:template>
+		                            <Select
+		                                    items="{path: '/sizes', templateShareable: true}"
+		                                    selectedKey="{size}"
+		                                    visible="{= !!${size}}"
+		                                    forceSelection="false">
+		                                <core:Item key="{key}" text="{value}"/>
+		                            </Select>
+		                        </t:template>
+		                    </t:Column>
+                		</t:columns>
+					</t:TreeTable>
+				</content>
+			</Page>
+		</masterPages>
+		
+	</SplitApp>
 </mvc:View>
