--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -1,11 +1,73 @@
+.firstSearchHitBackgorund {
+	background-color: #5184d6
+}
+.searchHitBackgorund {
+	background-color: #76d395;
+}
 .sapMShellBrandingBar {
     height: 0px;
 }
-
 .sapMSplitContainerMaster.sapMSplitContainerMasterVisible {
     width: 500px;
 }/* Enter your custom styles here */
 
 .custTitleStyle{
-	padding: 20px 0;
+	padding: 5px 0;
+	font-size: 12px;
+}
+.buttonTextSize {
+	margin-left: 5px;
+}
+.buttonTextSize span:focus {
+    outline: none !important;
+}
+.buttonTextSize span{
+	border-radius: 0.2rem;
+	height: 1.5rem;
+    min-width: 1.3rem;
+    background-color: transparent;
+}
+
+.buttonTextSize span span {
+	font-size: 15px !important;
+	line-height: 1.375rem;
+}
+.textSize {
+	font-size: 12px !important;
+}
+.treeButton{
+	font-size: 15px !important;
+	padding: 0;
+	margin: 0;
+	height: auto;
+
+}
+.treeButton:hover, .treeButton:focus{
+	outline-style: none;
+}
+.treeButton span{
+	border-radius: 0rem;
+	height: 1.5rem;
+    min-width: 1.3rem;
+    border-color: transparent;
+    background-color: transparent;;
+}
+
+.treeButton span span {
+	font-size: 12px !important;
+	line-height: 1.2rem;	
+}
+
+.treeButton span span:nth-child(2) {
+	font-size: 12px !important;
+}
+
+h4{
+	font-size: 14px !important;
+}
+.sapUiTableColHdrTr td div {
+	top:3px;
+}
+.sapUiTableColHdrTr td div span {
+	font-size: 14px !important;
 }
